--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       <div class="container">
         <div class="row grid-container"></div>
       </div>
-    </div><script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    </div>
+    <div class="exampleGit"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
